# sgps

./: README.md
C++/: README
C++ Algorithms/SGPS_CPP/include/: astroalg.h  day.h  diranalyzer.h  file.h  logger.h  noaafile.h  sgps.h
C++ Algorithms/SGPS_CPP/src/: CMakeLists.txt  SGPSProject-Debug@build.doxyfile  SGPS_test.cpp  astroalg.cpp  celestialmodel.cpp  day.cpp  diranalyzer.cpp  file.cpp  logger.cpp  noaafile.cpp  sgps.cpp
C++ Algorithms/Versions/: ChangeLog.txt
C++ Algorithms/Versions/Version 1.6.1/: CMakeLists.txt  LonErrorClass.cpp  README  dateTime.h  file.cpp  main.cpp
C++/SGPS_CPP/: CMakeLists.txt
C++/SGPS_CPP/build_tools/cmake/: deps.cmake  os.cmake  prettymessage.cmake  utils.cmake
C++/SGPS_CPP/doc/: Doxyfile
C++/SGPS_CPP/src/: config.h  config.h.cmake
C++/SGPS_CPP/src/apps/: CMakeLists.txt
C++/SGPS_CPP/src/apps/sgps_apply/: apply.cpp
C++/SGPS_CPP/src/apps/sgps_plotcoordinates/: plotcoordinates.cpp
C++/SGPS_CPP/src/apps/sgps_plotday/: CMakeLists.txt  plotday.cpp
C++/SGPS_CPP/src/apps/sgps_sgpstest/: sgpstest.cpp
C++/SGPS_CPP/src/base/include/: astroalg.h  celestialmodel.h  console.h  diranalyzer.h  file.h  filedec.h  huefile.h  logger.h  noaafile.h  options.h  plotter.h  sgps.h
C++/SGPS_CPP/src/base/src/: astroalg.cpp  celestialmodel.cpp  console.cpp  day.cpp  diranalyzer.cpp  file.cpp  filedec.cpp  gnuplot_i.cpp  huefile.cpp  logger.cpp  noaafile.cpp  options.cpp  plotter.cpp  sgps.cpp
C++/data/: archivoinvalido1  archivoinvalido2  genericdecmeasures.txt  genericmeasures.txt  imgft_Casa_Jose_12213.txt
C++/example/: CMakeLists.txt  plotcoordinates.cpp
C++/examples_static_lib/src/: CMakeLists.txt  Findsgps.cmake
C++/examples_static_lib/src/include/: astroalg.h  celestialmodel.h  console.h  coordinates.h  day.h  diranalyzer.h  file.h  gnuplot_i.h  logger.h  options.h  plotter.h  sgps.h
C++/examples_static_lib/src/src/: SGPS_test.cpp
Excel scripts/: Calculate phi.bas  ErrorLonAverage.bas  woEq.bas
Matlab/Fitting/: EQTvsFIT.fig  Fittingsession.cfit  fitfig.fig  fitstruct.mat  param.m
Matlab/GA_ICM/: Data1.txt  Data2-MoreTransitions.txt  ForwardCelestialModel.m  HHMMSS.m  InverseCelestialModel.m  IterativeFCM.m  README.txt  getDayMonth.m
Matlab/GA_ICM/GenAlg/: crossover.m  evaluate_element.m  generate_initial_population.m  genetic_algorithm.m  random_elements.m
Matlab/WSN/: Results.mat  Resultssat.mat  Resultstest.mat  SGPS_WSN_indep.m  SGPS_WSN_polygon.m  Visualize_init_data.m  analyze.m  create_polygon.m  errors_hist.m  euc_dist.m  gauss_prob.m  haversine.m  mah_dist.m  matlab.mat  plot_nodes.m  rotate_vertices.m  sgps_fitness.m  sgps_fitness_indep.m  sgps_fitness_prob.m  solve_triangle_SSS.m  symmetry.m  translate_vertices.m
Matlab/WSN/data/: errors.mat  getgooddays.m  getgooddays5.m  stations.mat  stations5.mat  testdata5.mat  validdata5.mat  validdata7.mat
Matlab/WSN/test/: fitness_star.m  rectangle_Javier.m  test_geometry.m
